# autogematria

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  serve_report_api.py
.github/workflows/: ci.yml
data/gematria/: connections.json
data/ground_truth/: known_findings.jsonl  known_findings_v2.jsonl
docs/: hebrew_normalization_spec.md  name-verification.md  pre_registration.md  production.md
experiments/: program.md
experiments/configs/: baseline.json
experiments/gematria_x600/: bench.py  ml_readiness.json  ml_readiness.py  program.md  results_100_followup.jsonl  results_500.jsonl  run_100_followup.py  run_500.py  summary_500.json  summary_final.json
experiments/moshe_gandi/: baseline.json  bench.py  program.md  results.jsonl  scope_probe.py  scope_probe_batch1.json  scope_probe_batch2.json  scope_probe_full.json  scope_probe_full_rerun.json
experiments/moshe_gindi_x100/: bench.py  best_strategy.json  program.md  results.jsonl  run_sweep.py  sweep_summary.json
experiments/results/: experiments.jsonl
src/autogematria/: __init__.py  config.py  download.py  gematria_connections.py  gematria_index.py  gematria_report_index.py  ingest.py  job_worker.py  jobs.py  normalize.py  prepare_data.py  report_service.py  run_logger.py  runtime_data.py  schema.py
src/autogematria/autoresearch/: ablation.py  dataset_rebuild.py  ground_truth.py  hard_negatives.py  harness.py  (+2 more)
tests/: test_api_server.py  test_cli_tool_surface.py  test_container_contract.py  test_cross_compare.py  test_emtzaei_tevot.py  test_evidence_contract.py  test_experimental_evidence.py  test_gematria_connections.py  test_gematria_index.py  test_gematria_pattern_search.py  test_gematria_reverse.py  test_gematria_search.py  test_glm_client.py  test_harness.py  test_html_report.py  test_ingest.py  test_jobs.py  test_kabbalistic.py  test_manual_name_matrix.py  test_name_parser.py  test_name_report.py  test_name_variants.py  test_normalize.py  test_prepare_data.py  test_research_gematria.py  test_research_runner.py  test_research_tasks.py  test_research_variants.py  test_research_workflow.py  test_run_logger.py  test_runtime_data.py  test_scorer_strict.py  test_search_els.py  test_search_roshei.py  test_search_unified.py  test_showcase.py  test_showcase_html.py  test_significance.py  test_tools.py  test_verify_cli.py
(+49 files in other folders)
