[project]
name = "autogematria"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hebrew>=0.8.0",
    "httpx>=0.27",
    "networkx>=3.2",
    "tqdm>=4.66",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]
mcp = ["fastmcp>=0.4"]

[project.scripts]
ag-download = "autogematria.download:main"
ag-ingest = "autogematria.ingest:main"
ag-index = "autogematria.gematria_index:main"
ag-search = "autogematria.search.unified:main"
ag-verify = "autogematria.tools.verify_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
